; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_importance.c_ipc_importance_task_hold_internal_assertion_locked.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_importance.c_ipc_importance_task_hold_internal_assertion_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IIT_UPDATE_HOLD = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @ipc_importance_task_hold_internal_assertion_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipc_importance_task_hold_internal_assertion_locked(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @IIT_UPDATE_HOLD, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @ipc_importance_task_check_transition(i32 %5, i32 %6, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %2
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @IIT_UPDATE_HOLD, align 4
  %13 = load i32, i32* @TRUE, align 4
  %14 = call i32 @ipc_importance_task_propagate_assertion_locked(i32 %11, i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %10, %2
  %16 = load i32, i32* @KERN_SUCCESS, align 4
  ret i32 %16
}

declare dso_local i64 @ipc_importance_task_check_transition(i32, i32, i32) #1

declare dso_local i32 @ipc_importance_task_propagate_assertion_locked(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
